// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MultiMediaDropzone 1`] = `
<div
  aria-disabled="false"
  class=""
>
  <div />
  <input
    autocomplete="off"
    multiple=""
    style="display:none;"
    type="file"
  />
</div>
`;

exports[`Render a MultiMediaDropzone while the overlay is visible 1`] = `
<div
  aria-disabled="false"
  class=""
>
  <div
    class="dropzoneOverlay"
  >
    <div
      class="dropArea"
    >
      <div
        class="uploadInfoContainer"
      >
        <div
          class="uploadInfo"
          role="button"
          tabindex="0"
        >
          <span
            aria-label="cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <h3
            class="uploadInfoHeadline"
          >
            Upload files by dropping them here
          </h3>
          <div
            class="uploadInfoSubline"
          >
            or click here to upload
          </div>
        </div>
      </div>
      <ul
        class="mediaItems"
      />
    </div>
  </div>
  <div />
  <input
    autocomplete="off"
    multiple=""
    style="display:none;"
    type="file"
  />
</div>
`;
